--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
-﻿<!DOCTYPE html>
-<html lang="zh">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Heart</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <script src="js/three.min.js"></script>
-    <script src="js/MeshSurfaceSampler.js"></script>
-    <script src="js/TrackballControls.js"></script>
-    <script src="js/simplex-noise.js"></script>
-    <script src="js/OBJLoader.js"></script>
-    <script src="js/gsap.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>love</title>
+</head>
+<body>
+    <canvas id="c"></canvas>
+    <script src="script.js"></script>
+</body>
 </html>
